--- a/editor/templates/editor/room.html
+++ b/editor/templates/editor/room.html
@@ -613,7 +613,7 @@
                 editor.setValue(content);
                 editorElement.dataset.file_id = file_id
                 console.log(editorElement.dataset.file_id)
-                document.getElementById('inputs').value = ""
+                // document.getElementById('inputs').value = ""
 
 
             });
