--- a/editor/templates/editor/room2.html
+++ b/editor/templates/editor/room2.html
@@ -431,6 +431,7 @@
 
         .file-list {
             max-height: 300px;
+            max-height: 300px;
             overflow-y: auto;
             scrollbar-width: thin;
             /* Firefox */
